Project containers have a favorite and track button with light scripting to change color. Header elements no longer wrap when shrunk. Dashboard elements align when shrunk. Completed layout of the main content and styling.

--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,39 @@ body{
 :root {
     --button-color: #487fde;
     --button-font-c: white;
+    --search-color: rgb(215, 241, 251);
     --button-radius: 15px;
   }  
 
-.greeting>.username{
+  .username{
+    white-space: nowrap;
+  }
+
+.greeting>div>.username{
     font-size: 20px;
+}
+
+.greeting{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    gap: 20px;
+    padding-right: 5px;
+}
+
+.greeting>div{
+    display: flex;
+    flex-direction: column;
+}
+
+.greeting>i{
+    font-size: 36px;
 }
 
 .container{
     display: grid;
-    grid-template-columns: minmax(150px, 200px) 1fr;
-    grid-template-rows: 200px 1fr;
+    grid-template-columns: minmax(210px, 210px) 1fr;
+    grid-template-rows: 180px 1fr;
     height: 100vh;
 }
 
@@ -37,8 +59,10 @@ header{
     margin-left: 30px;
 }
 
-.uppersearch{
+.upper-search{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 input[type="search"] {
@@ -46,7 +70,7 @@ input[type="search"] {
     height: 25px;
     border-radius: 20px;
     border-style: none;
-    background-color: rgb(215, 241, 251);
+    background-color: var(--search-color);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -55,10 +79,8 @@ input[type="search"] {
   #search{
     margin-left: 20px;
     flex-grow: 1;
-    display: inline-block;
-  }
-
-  .fa-magnifying-glass {
+    flex-shrink: 0;
+    display: flex;
   }
 
   .user{
@@ -143,9 +165,6 @@ sidebar button{
     gap: 10px;
 }
 
-.button-group{
-}
-
 #dash{
     color: var(--button-font-c);
 }
@@ -153,11 +172,23 @@ sidebar button{
 sidebar i{
     color: white;
     flex-shrink: 0;
+    font-size: 20px;
+    width: 36px;
+}
+
+.button-gro{
+    display: flex;
+    padding-left: 10px;
+    justify-content: flex-start;
+}
+
+.button-gro>div{
+    padding-left: 8px;
 }
 
 maincontent{
     box-shadow: 10px 20px 10px 20px rgba(0, 0, 0, 0.2);
-    background-color: rgb(215, 241, 251);
+    background-color: var(--search-color);
     grid-row: 2/2;
     grid-column: 2/2;
     display: grid;
@@ -189,40 +220,128 @@ maincontent{
 }
 
   .project {
+    display: grid;
+    grid-template-columns: 1fr 100px;
+    grid-template-rows: 40px 1fr 50px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
     height: 200px;
     width: 200px;
     border-radius: 15px;
+    border-left: 10px solid orange;
     background-color: white;
+    padding: 10px;
   }
 
+.project h4{
+    grid-row: 1/1;
+    grid-column: 1/3;
+}
+
+.project p{
+    max-height: 100px;
+    overflow-y: auto;
+    font-size: 12px;
+    grid-row: 2/2;
+    grid-column: 1/3;
+  }
+
+.project p, .project h4{
+    margin: 0;
+  padding: 5px 0;
+}
+
+.project div{
+    margin: 0;
+    padding: 5px 0;
+    grid-row: 3/3;
+    grid-column: 2/3;
+    padding-top: 20px;
+    gap: 4px;
+}
+
+.project>div button{
+    background-color: var(--button-color);
+    color: var(--button-font-c);
+    border-style: none;
+    outline-style: none;
+    border-radius: var(--button-radius);
+    width: 40px;
+  }
+
+.project>div button:hover{
+    color: gold;
+}
+
+  .fave.active {
+    color: gold;
+  }
+  
+  .track.active {
+    color: gold;
+  }
+  
   .announce h4{
     font-size: 18px;
   }
 
+  .announce p{
+    font-size: 12px;
+  }
+
+.announce h4,
+.announce p {
+  margin: 0;
+  padding: 5px 0;
+}
+
   .announce{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    overflow: auto;
     font-size: 14px;
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
-    height: 400px;
+    height: 220px;
     width: 250px;
     padding-left: 5px;
     background-color: white;
+  }
+
+  .announce>div{
+    border-bottom: 1px solid gray;
   }
 
   .trend h4{
     font-size: 16px;
   }
 
+  .trend>ul{
+    margin: 0;
+    padding: 5px 0;
+  }
+
   .trend{
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
     font-size: 14px;
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
-    height: 100px;
+    height: 150px;
     width: 220px;
     background-color: white;
+    overflow: auto;
+  }
+
+  .trend>ul>li{
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .trend>ul>li>div>p{
+    font-size: 11px;
   }
